# Portfolio

./: README.md
django-app/: Dockerfile  docker-compose.yaml  pyproject.toml
django-app/portfolio/: main.py
django-app/portfolio/main_port/: apps.py  forms.py  urls.py  utils.py  views.py
django-app/portfolio/main_port/templates/main_port/: about_me.html  base.html  data_prof.html  main_list_1.html  trash.html
django-app/portfolio/portfolio/: settings.py  stat.sh  urls.py
